# multi-lvl-comms

./: .gitignore  CMakeLists.txt  EXPERIMENT_DEPOT.md  FUTURE_wknd_plan.md  README.md  math.md  setup-local.sh  train_world_model.py
battleship/: CMakeLists.txt  battleship_env.cc  battleship_env.hh  battleship_sim.cc  plot_battleship.py  plot_comparison.py  run_battleship_comparison.sh  run_battleship_grid.sh  run_comparison_long.sh  train_battleship.py
build-local/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-local/battleship/: Makefile  battleship-sim  cmake_install.cmake
build-local/poker/: Makefile  cmake_install.cmake
build-local/robot_sim/: Makefile  cmake_install.cmake
docker/: Dockerfile  README.md  build-docker
execution/: gaussian_field_env.py  intersection_env.py  island_coverage_env.py  team_poker_env.py
for_lux_and_will/: README.md  summary.csv
for_will/: EXPERIMENTS.md  last_experiments.md
for_will/20260427_030052/: summary.csv
for_will/20260427_030052/wm_loss10_seed0/: trainer.jsonl
for_will/20260427_030052/wm_loss10_seed0/logs/: seqcomm_20260427_030053.jsonl
for_will/20260427_030052/wm_loss10_seed0/stdout/: cpp.out  init.out  pids.env  plot.out  python.out
for_will/20260427_030052/wm_loss10_seed0/weights/: attn_a.pt  attn_w.pt  critic.pt  encoder.pt  policy.pt  world_model.pt
for_will/20260427_030443/: summary.csv
for_will/20260427_030443/wm_loss20_seed0/: trainer.jsonl
for_will/20260427_030443/wm_loss20_seed0/logs/: seqcomm_20260427_030444.jsonl
for_will/20260427_030443/wm_loss20_seed0/stdout/: cpp.out  init.out  pids.env  plot.out  python.out
for_will/20260427_030443/wm_loss20_seed0/weights/: attn_a.pt  attn_w.pt  config.json  critic.pt  encoder.pt  policy.pt  world_model.pt
for_will/20260427_030819/: summary.csv
for_will/20260427_030819/wm_loss30_seed0/: trainer.jsonl
for_will/20260427_030819/wm_loss30_seed0/logs/: seqcomm_20260427_030820.jsonl
for_will/20260427_030819/wm_loss30_seed0/stdout/: cpp.out  init.out  pids.env  plot.out  python.out
for_will/20260427_030819/wm_loss30_seed0/weights/: attn_a.pt  attn_w.pt  critic.pt  encoder.pt  policy.pt  world_model.pt
for_will/20260427_032405/: summary.csv
for_will/20260427_032405/commgate_large_seed0/: trainer.jsonl
for_will/20260427_032405/commgate_large_seed0/logs/: seqcomm_20260427_033022.jsonl
for_will/20260427_032405/commgate_large_seed0/stdout/: cpp.out  init.out  pids.env  plot.out  python.out
for_will/20260427_032405/commgate_large_seed0/weights/: attn_a.pt  attn_w.pt  comm_gate.pt  critic.pt  encoder.pt  policy.pt  world_model.pt
for_will/20260427_032405/commgate_medium_seed0/: trainer.jsonl
for_will/20260427_032405/commgate_medium_seed0/logs/: seqcomm_20260427_032717.jsonl
for_will/20260427_032405/commgate_medium_seed0/stdout/: cpp.out  init.out  pids.env  plot.out  python.out
for_will/20260427_032405/commgate_medium_seed0/weights/: attn_a.pt  attn_w.pt  comm_gate.pt  critic.pt  encoder.pt  policy.pt  world_model.pt
for_will/20260427_032405/commgate_tiny_seed0/: trainer.jsonl
for_will/20260427_032405/commgate_tiny_seed0/logs/: seqcomm_20260427_032406.jsonl
for_will/20260427_032405/commgate_tiny_seed0/stdout/: cpp.out  init.out  pids.env  plot.out  python.out
for_will/20260427_032405/commgate_tiny_seed0/weights/: attn_a.pt  attn_w.pt  comm_gate.pt  critic.pt  encoder.pt  policy.pt  world_model.pt
logs/: intersection_seqcomm_seed0.jsonl
logs/baseline/: intersection_mappo_seed0.jsonl  intersection_mappo_seed1.jsonl  intersection_mappo_seed2.jsonl  intersection_seqcomm_fixed_seed0.jsonl  intersection_seqcomm_fixed_seed1.jsonl  intersection_seqcomm_fixed_seed2.jsonl  intersection_seqcomm_no_action_seed0.jsonl  intersection_seqcomm_no_action_seed1.jsonl  intersection_seqcomm_no_action_seed2.jsonl  intersection_seqcomm_random_seed0.jsonl  intersection_seqcomm_random_seed1.jsonl  intersection_seqcomm_random_seed2.jsonl  intersection_seqcomm_seed0.jsonl  intersection_seqcomm_seed1.jsonl  intersection_seqcomm_seed2.jsonl
logs/island/: coverage_mappo_H2_F2_seed0.jsonl  coverage_mappo_H2_F2_seed1.jsonl  coverage_mappo_H2_F2_seed2.jsonl  coverage_seqcomm_H1_F1_seed0.jsonl  coverage_seqcomm_H1_F1_seed1.jsonl  coverage_seqcomm_H1_F1_seed2.jsonl  coverage_seqcomm_fixed_H2_F2_seed0.jsonl  coverage_seqcomm_fixed_H2_F2_seed1.jsonl  coverage_seqcomm_fixed_H2_F2_seed2.jsonl  coverage_seqcomm_no_action_H1_F1_seed0.jsonl  coverage_seqcomm_no_action_H1_F1_seed1.jsonl  coverage_seqcomm_no_action_H1_F1_seed2.jsonl  coverage_seqcomm_random_H2_F2_seed0.jsonl  coverage_seqcomm_random_H2_F2_seed1.jsonl  coverage_seqcomm_random_H2_F2_seed2.jsonl  mappo_seed0.stdout  mappo_seed1.stdout  mappo_seed2.stdout  seqcomm_fixed_seed0.stdout  seqcomm_fixed_seed1.stdout  seqcomm_fixed_seed2.stdout  seqcomm_no_action_seed0.stdout  seqcomm_no_action_seed1.stdout  seqcomm_no_action_seed2.stdout  seqcomm_random_seed0.stdout  seqcomm_random_seed1.stdout  seqcomm_random_seed2.stdout  seqcomm_seed0.stdout  seqcomm_seed1.stdout  seqcomm_seed2.stdout
notebooks/: island_coverage_colab.ipynb
poker/: CMakeLists.txt  poker_env.cc  poker_env.hh  poker_sim.cc
robot_sim/: CMakeLists.txt  GNUmakefile  agent_action.cc  agent_action.hh  failure_model.cc  gaussian_field_env.cc  gaussian_field_env.hh  intersection_env.cc  intersection_env.hh  libtorch_models.hh  lockseq_model.cc  netsim.hh  pancy_msgs.hh  print  pt-paxos.cc  seqcomm_sim.cc  seqcomm_sim_trained.cc  trajectory_io.hh  utils.hh
robot_sim/world_model/: train_world_model.cc
runs/comparison/20260426_223428/mappo_seed0/: trainer.jsonl
runs/comparison/20260426_223428/mappo_seed1/: trainer.jsonl
runs/comparison/20260426_223428/seqcomm_seed0/: trainer.jsonl
runs/comparison/20260426_223428/seqcomm_seed1/: trainer.jsonl
runs/comparison/20260426_230116/mappo_seed0/: trainer.jsonl
runs/comparison/20260426_230116/mappo_seed1/: trainer.jsonl
scripts/: plot_baseline.py  plot_island.py  run_baseline.sh  run_island.sh
training/: train.py  train_from_cpp.py  train_world_model.py
(+92 files in other folders)
